fix: Change title font size, center button on mobile

--- a/app/(frontend)/components/PageHero/PageHero.module.scss
+++ b/app/(frontend)/components/PageHero/PageHero.module.scss
@@ -32,6 +32,10 @@
     margin-bottom: to-rem(24);
     text-align: center;
 
+    @include media-breakpoint-down(md) {
+      @include h2;
+    }
+
     @include media-breakpoint-up(md) {
       padding-right: $spacing-x-large;
       text-align: left;
@@ -77,7 +81,10 @@
   padding-bottom: to-rem(16);
   text-align: center;
 
-  @include media-breakpoint-up(md) {
-    text-align: left;
+  @include media-breakpoint-down(md) {
+    & > a {
+      margin-right: auto;
+      margin-left: auto;
+    }
   }
 }
